Closed Bug 694797 Opened 14 years ago Closed 14 years ago

Cairo fails to build with VC11 because it tries to #define inline, which is a keyword in C++

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

VC11's xkeycheck.h catches this with an #error.
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #567307 - Flags: review?(jmuizelaar)
Blocks: VC11
Attachment #567307 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: